<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_runes"
            android:icon="@drawable/nordic_paganism"
            android:title="@string/runario" />
        <item
            android:id="@+id/nav_symbols"
            android:icon="@drawable/runes"
            android:title="@string/simbologia" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/thor"
            android:title="@string/historias" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/valknut"
            android:title="@string/runas" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/horn"
                android:title="@string/redes_sociales" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/boat"/>
        </menu>
    </item>

</menu>
